<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.niko.pocbynico.Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/hello"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/hello_content_debut"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/hello_content_milieu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <Button
            android:id="@+id/push_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_it" />

        <Button
            android:id="@+id/feel_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feelpro"/>

        <Button
            android:id="@+id/soutenance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soutenance"/>
    </LinearLayout>


</LinearLayout>
